# BrandBoek-AutomationPortaal

./: .env  .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-process-canvas/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-data-completeness/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-export/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-portal-quality/: 04-01-PLAN.md  (+10 more)
backend/: .env.example  main.py
backend/connectors/: base.py  hubspot.py
backend/mapper/: hubspot_mapper.py
gitlabtest/: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  mise.toml  pyproject.toml  railway.toml
gitlabtest/app/: auth.py  constants.py  exceptions.py  hubspot_client.py  logging_config.py  main.py  types.py  utils.py
gitlabtest/app/API/: clockify.py  kvk.py  operations.py  portal.py  properties.py  sales.py  typeform.py  wefact.py
gitlabtest/app/repository/: hubspot.py
gitlabtest/app/schemas/: classes.py
gitlabtest/app/service/: rate_limiter.py
gitlabtest/app/service/clockify/: clockify.py
gitlabtest/app/service/kvk/: kvk.py
gitlabtest/app/service/operations/: betaalt_niet.py  btw_bankconnection.py  constants.py  deal_builder.py  deal_creation.py  deal_search.py  deal_updates.py  dossier.py  facturen.py  find_correct_stage.py  hubspot.py  operations.py  pipelines.py
gitlabtest/app/service/operations/va_pipelines/: utils.py  va_ib.py  va_vpb.py
gitlabtest/app/service/properties/: bankkoppeling_contact.py  btw_assignment.py  dossier_to_deal.py  ib_jr_owners.py  ib_kan_gemaakt_worden.py  jr_pipeline.py  machtiging_actief.py
gitlabtest/app/service/sales/: constants.py  sales.py  split_pipelines.py  typeform.py
gitlabtest/app/service/typeform/: __init__.py  onboarding.py  typeform.py
gitlabtest/app/service/wefact/: openstaand_bedrag.py  wefact.py
gitlabtest/docs/: README.md  architecture.md  authentication.md  rate-limiting.md  scheduled-jobs.md
gitlabtest/docs/features/clockify/: README.md
gitlabtest/docs/features/operations/: README.md
gitlabtest/docs/features/portal/: README.md
gitlabtest/docs/features/properties/: README.md
gitlabtest/docs/features/sales/: README.md
gitlabtest/docs/features/wefact/: README.md
gitlabtest/scripts/: clear_wefact_duplicate_record_ids.py  clockify_add_customer_service_tasks.py  clockify_import.py  update_wefact_from_hubspot.py  wefact_mark_matched_contacts.py  wefact_match.py  wefact_match_by_record_id.py  wefact_match_contacts_by_email.py  wefact_reconcile_and_notebook.py  wefact_update_hubspot_company_ids.py
gitlabtest/scripts/wefact_data/: hours_vs_revenue_analysis.ipynb
gitlabtest/tests/: conftest.py  test_auth.py  test_btw_assignment.py  test_ib_jr_owners.py  test_logging_config.py  test_onboarding_service.py  test_operations_api.py  test_sales_api.py  test_sales_service.py  test_typeform_service.py  test_utils.py
public/: bpmn-graph.json
public/docs/: PORTAAL-DOCUMENTATIE.md
src/: App.tsx  index.css
src/components/: AppLayout.tsx  AutomationSwimlaneBoard.tsx  AutomatiseringForm.tsx  Badges.tsx  FlowCard.tsx  FlowConfirmDialog.tsx  PipelineCard.tsx  VerificatieBadge.tsx
src/data/: processData.ts
src/hooks/: useBpmnGraph.ts
src/lib/: bpmnApi.ts  brandy.ts  codeReaderService.ts  detectFlows.ts  evaluateAutomation.ts  forceLayout.ts  gitlabService.ts  graphAnalysis.ts  hooks.ts  processDrift.ts  signalen.ts  storage.ts  supabaseStorage.ts  systemMeta.ts  types.ts
src/pages/: AIUpload.tsx  AlleAutomatiseringen.tsx  Analyse.tsx  AuthPage.tsx  BPMNViewer.tsx  BewerkAutomatisering.tsx  Brandy.tsx  Dashboard.tsx  FlowDetail.tsx  Flows.tsx  Imports.tsx  Instellingen.tsx  KennisGraaf.tsx  KennisGraaf3D.tsx  Mindmap.tsx  NieuweAutomatisering.tsx  NieuweAutomatiseringPage.tsx  Owners.tsx  PipelineDetail.tsx  Pipelines.tsx  Proceskaart.tsx  Processen.tsx  Systems.tsx  Verificatie.tsx
src/test/: crossLinking.test.ts  detectFlows.test.ts  domainLogic.test.ts  entityPages.test.ts  exportFlow.test.ts  flowEdges.test.ts  importsFlow.test.ts  processCanvas.test.ts  processDrift.test.ts  processState.test.ts  signalen.test.ts  systemMeta.test.ts
src/types/: bpmn.ts
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260317161336_df1bfe55-b4b2-4abe-bfff-9596fe5a7cbf.sql  20260323120000_hubspot_integration.sql  20260325120000_process_state.sql  20260407120000_brandy_feedback.sql  20260409120000_brandy_mind.sql  20260414120000_brandy_mind_suggesties.sql  20260414130000_gitlab_fields.sql  20260415120000_portal_settings.sql  20260415130000_backfill_source_tags.sql  20260416120000_automation_links.sql  20260416130000_enrichment_columns.sql  20260417000000_pipelines_table.sql  20260421000000_flows_table.sql  20260422000000_flows_stappen.sql  20260424000000_add_beschrijving_to_pipelines.sql  20260428000000_pipeline_is_active.sql  20260428000001_pipeline_update_policy.sql  20260429000000_process_state_parked.sql  20260429100000_process_state_active_lanes.sql  20260429110000_process_state_custom_lanes.sql
(+119 files in other folders)
